--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/leon.css">
     <!-- render all elememts normally -->
     <link rel="stylesheet" href="css/normalize.css">
+    <!--font Awesome library-->
+    <link rel="stylesheet" href="css/all.min.css">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +20,34 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="container">
+            <i class="fa-regular fa-eye" style="font-size:30px; color:#10cab7"></i>
+            <div class="links">
+                <span class="icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <ul>
+                    <li><a href="#services">services</a></li>
+                    <li><a href="#portofolio">portofolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
+    <!--start landing section-->
+    <div class="landing">
+        <div class="intro_text">
+            <h1>hello there</h1>
+            <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
+            <!-- End Landing Section -->
+
+        </div>
+    </div>
 </body>
 
 </html>
