--- a/index.html
+++ b/index.html
@@ -44,9 +44,135 @@
         <div class="intro_text">
             <h1>hello there</h1>
             <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
-            <!-- End Landing Section -->
-
         </div>
+    </div>
+    <!-- End Landing Section -->
+    <!-- start features -->
+    <div class="features">
+        <div class="container">
+            <div class="feat">
+                <i class="fas fa-magic fa-3x"></i>
+                <h3>Tell Us Your Idea</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="feat">
+                <i class="far fa-gem fa-3x"></i>
+                <h3>We Will Do All The Work</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="feat">
+                <i class="fas fa-globe-asia fa-3x"></i>
+                <h3>Your Product is Worldwide</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+        </div>
+    </div>
+    <!--end features -->
+
+    <!-- start sevices  -->
+    <div class="services">
+        <div class="container">
+            <div class="special-heading">
+                <h2 class="service">services</h2>
+                <p> Don't be busy, be productive</p>
+                <div class="services-content">
+                    <div class="col">
+                        <!-- start service -->
+                        <div class="srv">
+                            <i class="fas fa-palette fa-2x"></i>
+                            <div class="text">
+                                <h3>Graphic Design</h3>
+                                <p>Graphic design is the process of visual communication and problem-solving using one
+                                    or more of
+                                    typography, photography and illustration</p>
+                            </div>
+                        </div>
+                        <div class="srv">
+                            <i class="fab fa-sketch fa-2x"></i>
+                            <div class="text">
+                                <h3>UI & UX</h3>
+                                <p>Process of enhancing user satisfaction with a product by improving the usability,
+                                    accessibility, and
+                                    pleasure provided in the interaction</p>
+                            </div>
+                        </div>
+                        <!-- end service -->
+                    </div>
+                    <div class="col">
+                        <!-- Start Services -->
+                        <div class="srv">
+                            <i class="fas fa-vector-square fa-2x"></i>
+                            <div class="text">
+                                <h3>Web Design</h3>
+                                <p>
+                                    Web design encompasses many different skills and disciplines in the production and
+                                    maintenance of
+                                    websites.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="srv sev">
+                            <i class="fas fa-pencil-ruler fa-2x"></i>
+                            <div class="text">
+                                <h3>Web Development</h3>
+                                <p>
+                                    Web development is a broad term for the work involved in developing a web site for
+                                    the Internet or an
+                                    intranet.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- End Services -->
+                    </div>
+                    <div class="col">
+                        <div class="image hidden-image">
+                            <img src="OIP.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end sevices -->
+    <div class="portofolio">
+        <div class="container">
+            <div class="special-heading">
+                <h2 class="porto">portofolio</h2>
+                <p> If you do it right, it will last forever</p>
+                <div class="portofolio-content">
+                    <div class="card">
+                        <img src="OIF.jpeg" alt="">
+                        <div class="info">
+                            <p><h3>project here</h3></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laboriosam in quibusdam
+                                tenetur amet quam est recusandae </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="OIF.jpeg" alt="">
+                        <div class="info">
+                            <p><h3>project here</h3></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laboriosam in quibusdam
+                                tenetur amet quam est recusandae </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="OIF.jpeg" alt="">
+                        <div class="info">
+                            <p><h3>project here</h3></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laboriosam in quibusdam
+                                tenetur amet quam est recusandae </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- start portofolio -->
+
+    <!-- end portofolio -->
+
+
     </div>
 </body>
 
