--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <!--end features -->
 
     <!-- start sevices  -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <div class="special-heading">
-                <h2 class="service">services</h2>
+                <h2 class="special2">services</h2>
                 <p> Don't be busy, be productive</p>
                 <div class="services-content">
                     <div class="col">
@@ -134,16 +134,19 @@
         </div>
     </div>
     <!-- end sevices -->
-    <div class="portofolio">
+    <!-- start portofolio -->
+    <div class="portofolio" id="portofolio">
         <div class="container">
             <div class="special-heading">
-                <h2 class="porto">portofolio</h2>
+                <h2 class="special2">portofolio</h2>
                 <p> If you do it right, it will last forever</p>
                 <div class="portofolio-content">
                     <div class="card">
                         <img src="OIF.jpeg" alt="">
                         <div class="info">
-                            <p><h3>project here</h3></p>
+                            <p>
+                            <h3>project here</h3>
+                            </p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laboriosam in quibusdam
                                 tenetur amet quam est recusandae </p>
                         </div>
@@ -151,7 +154,9 @@
                     <div class="card">
                         <img src="OIF.jpeg" alt="">
                         <div class="info">
-                            <p><h3>project here</h3></p>
+                            <p>
+                            <h3>project here</h3>
+                            </p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laboriosam in quibusdam
                                 tenetur amet quam est recusandae </p>
                         </div>
@@ -159,7 +164,9 @@
                     <div class="card">
                         <img src="OIF.jpeg" alt="">
                         <div class="info">
-                            <p><h3>project here</h3></p>
+                            <p>
+                            <h3>project here</h3>
+                            </p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laboriosam in quibusdam
                                 tenetur amet quam est recusandae </p>
                         </div>
@@ -168,10 +175,69 @@
             </div>
         </div>
     </div>
-    <!-- start portofolio -->
-
     <!-- end portofolio -->
+    <!-- start about -->
+    <div class="about" id="about">
+        <dvi class="container">
+            <div class="special-heading">
+                <h2 class="special2">About</h2>
+                <p>less is more work</p>
+                <div class="about-content">
+                    <div class="imge">
+                        <img src="R.jpg">
+                    </div>
+                    <div class="text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat alias facere quas nulla sit
+                            dolore aperiam similique praesentium molestiae distinctio accusantium, quidem cupiditate
+                            ducimus, numquam eos. Placeat ipsa ex sint?
+                        </p>
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat alias facere quas nulla sit
+                            dolore aperiam similique praesentium molestiae distinctio accusantium, quidem cupiditate
+                            ducimus, numquam eos. Placeat ipsa ex sint?
+                        </p>
+                    </div>
+                </div>
+            </div>
+    </div>
 
+    </div>
+    <!-- end about -->
+    <!-- start of contact -->
+    <div class="contact" id="contact">
+        <div class="container">
+            <div class="special-heading">
+                <div class="special2"> contact</div>
+                <p>we are porn to creat</p>
+                <div class="content">
+                    <p>fell free to drop us a line at:
+                    </p>
+                    <br>
+                    <div class="gmail">
+                        <a href="mail to:mohamedxz2006xz@gmail.com">mohamedxz2006xz@gmail.com</a>
+                    </div>
+                    <div class="social">
+                        <p>contact us on social media</p>
+                        <div class="links">
+                            <a href="www.facebok.com"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="www.instegram.com"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+                            <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="www.linkedin.com"><i class="fa-brands fa-github"></i></a>
+                            <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of contact -->
+     <!-- start footer -->
+      <div class="footer">
+        &copy; 2021 <span>leon</span> all right reserved
+      </div>
+
+      <!-- end footer -->
 
     </div>
 </body>
